Add CenterCrop description.

--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-10T16:31:53.707922Z",
@@ -25,15 +25,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DECODE version: v0.10.0.alpha.0-124-g8123375b-dirty\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('/Users/lucasmueller/git/decode')\n",
@@ -250,33 +242,24 @@
     "## Set Up Pre- and Post-Processing\n",
     "In the following we will set up the processing pipeline.\n",
     "\n",
-    "### EM-Gain Mirroring\n",
-    "**Warning** Depending on your specific camera setup you need to modify the following pipeline a bit. In our case (using an EM-CCD camera) the beads are acquired without EM-Gain, while the experimental frames were acquired with EM-Gain. For our camera, due to some hardware specifics, EM-Gain enabled will lead the frames to be mirrored in the last dimension. Since the trained model and the experimental frames need to be consistent with respect to the PSF, we account for this mirroring by `Mirror2D(dims=-1)`.\n",
-    "Depending on your individual camera you might be able to omit this. Particularly if you are using a sCMOS camera."
+    "### Frame-Processing\n",
+    "**WARNING: Mirror2D** Depending on your specific camera setup you need to modify the following pipeline. In our case (using an EM-CCD camera) the beads are acquired without EM-Gain, while the experimental frames were acquired with EM-Gain. For our camera, due to some hardware specifics, EM-Gain enabled will lead the frames to be mirrored in the last dimension. Since the trained model and the experimental frames need to be consistent with respect to the PSF, we account for this mirroring by `Mirror2D(dims=-1)`.\n",
+    "\n",
+    "Depending on your individual camera you might be able to omit this. Particularly if you are using a sCMOS camera.\n",
+    "\n",
+    "**AutoCenterCrop** Due to peculiarities of training a Deep Learning model, the size of the input frame is slightly restricted. In our case the input frame size must be in multitudes of 8 per edge. For this reason we ***center crop*** the frame to a size that satisfies this requirement. That means an input frame of size 34 x 41 would be cropped to 32 x 40 and only fitted in this region. If you want to use a non-destructive method you could replace `AutoCenterCrop` by `AutoPad`, however this could lead to a distortion at the frame border which is why we recommend `AutoCenterCrop`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-10T16:35:47.813345Z",
      "start_time": "2020-10-10T16:35:45.926295Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'camera' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-0d037c4b19af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# setup frame processing as by the parameter with which the model was trained\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m frame_proc = decode.neuralfitter.utils.processing.TransformSequence([\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mdecode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneuralfitter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrap_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcamera\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mdecode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneuralfitter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe_processing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAutoCenterCrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdecode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneuralfitter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe_processing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMirror2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# WARNING: You might need to comment this line out. see above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'camera' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# setup frame processing as by the parameter with which the model was trained\n",
     "frame_proc = decode.neuralfitter.utils.processing.TransformSequence([\n",
