add auto-sig rendering. edit Fit notebook

--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -14,10 +14,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:31:53.707922Z",
-     "start_time": "2020-10-10T16:31:49.338797Z"
+     "end_time": "2021-03-12T14:01:25.825657Z",
+     "start_time": "2021-03-12T14:01:20.222288Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -56,13 +55,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:31:53.716133Z",
-     "start_time": "2020-10-10T16:31:53.711877Z"
+     "end_time": "2021-03-12T14:01:25.835784Z",
+     "start_time": "2021-03-12T14:01:25.830282Z"
     }
    },
    "outputs": [],
    "source": [
-    "device = 'cuda:0'  # or 'cpu', or you change cuda device index\n",
+    "device = 'cuda:1'  # or 'cpu', or you change cuda device index\n",
     "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you know what you are doing.\n",
     "worker = 0  # number of workers for data loading. Used a default of 0 for safety. Multiprocessing on windows is sometimes not stable\n",
     "\n",
@@ -88,8 +87,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:31:53.730382Z",
-     "start_time": "2020-10-10T16:31:53.719167Z"
+     "end_time": "2021-03-12T14:01:25.845435Z",
+     "start_time": "2021-03-12T14:01:25.839460Z"
     }
    },
    "outputs": [],
@@ -126,10 +125,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:31:53.740374Z",
-     "start_time": "2020-10-10T16:31:53.733195Z"
+     "end_time": "2021-03-12T14:01:35.284586Z",
+     "start_time": "2021-03-12T14:01:25.848535Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -174,8 +172,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:31:55.723628Z",
-     "start_time": "2020-10-10T16:31:53.743152Z"
+     "end_time": "2021-03-12T14:01:39.257579Z",
+     "start_time": "2021-03-12T14:01:35.287285Z"
     }
    },
    "outputs": [],
@@ -192,8 +190,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:31:55.723628Z",
-     "start_time": "2020-10-10T16:31:53.743152Z"
+     "end_time": "2021-03-12T14:01:39.264480Z",
+     "start_time": "2021-03-12T14:01:39.259666Z"
     }
    },
    "outputs": [],
@@ -222,8 +220,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:43:05.840921Z",
-     "start_time": "2020-10-10T16:43:03.773855Z"
+     "end_time": "2021-03-12T14:01:42.043167Z",
+     "start_time": "2021-03-12T14:01:39.266413Z"
     }
    },
    "outputs": [],
@@ -255,8 +253,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:35:47.813345Z",
-     "start_time": "2020-10-10T16:35:45.926295Z"
+     "end_time": "2021-03-12T14:01:42.062769Z",
+     "start_time": "2021-03-12T14:01:42.046431Z"
     }
    },
    "outputs": [],
@@ -304,8 +302,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:39:34.382654Z",
-     "start_time": "2020-10-10T16:35:49.690927Z"
+     "end_time": "2021-03-12T14:03:33.864720Z",
+     "start_time": "2021-03-12T14:01:42.064995Z"
     }
    },
    "outputs": [],
@@ -322,8 +320,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:39:34.494270Z",
-     "start_time": "2020-10-10T16:39:34.392752Z"
+     "end_time": "2021-03-12T14:03:33.924896Z",
+     "start_time": "2021-03-12T14:03:33.867164Z"
     }
    },
    "outputs": [],
@@ -344,8 +342,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:39:35.133481Z",
-     "start_time": "2020-10-10T16:39:34.496432Z"
+     "end_time": "2021-03-12T14:03:34.768619Z",
+     "start_time": "2021-03-12T14:03:33.926969Z"
     }
    },
    "outputs": [],
@@ -374,7 +372,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-12T14:03:39.093090Z",
+     "start_time": "2021-03-12T14:03:34.770737Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(14,4))\n",
@@ -406,15 +409,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:39:36.867032Z",
-     "start_time": "2020-10-10T16:39:35.134790Z"
+     "end_time": "2021-03-12T14:03:48.522684Z",
+     "start_time": "2021-03-12T14:03:39.095254Z"
     }
    },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12, 12))\n",
-    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., clip_percentile=97.).render(emitter)\n",
-    "\n",
+    "decode.renderer.Renderer3D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=5, zextent=[-600,600], plot_axis=(0,1,2)).render(emitter)\n",
+    "plt.show()\n",
+    "plt.figure(figsize=(12, 3))\n",
+    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=50, plot_axis=(0,2)).render(emitter)\n",
     "plt.show()"
    ]
   },
@@ -438,8 +443,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:39:37.684470Z",
-     "start_time": "2020-10-10T16:39:36.868650Z"
+     "end_time": "2021-03-12T14:03:55.229967Z",
+     "start_time": "2021-03-12T14:03:48.524576Z"
     }
    },
    "outputs": [],
@@ -466,7 +471,7 @@
    "source": [
     "It is almost always beneficial for the image quality to remove the worst localizations.\n",
     "Below we remove all localizations with uncertainties that exceed 40 nm in x,y or 80 nm in z.\n",
-    "This leaves us with 74% of the detections. Alternatively you can specify the remaining percentage directly with the `emitter.filter_by_sigma(fraction)` method.\n",
+    "This leaves us with 74% of the detections. Alternatively you can specify the remaining percentage directly with the `emitter.filter_by_sigma(fraction)` method which will remove the emitters with the lowest combined uncertainty.\n",
     "If you compare the rendering to the previous (unfiltered) one, you can see that this procedure eliminated all visible artefacts."
    ]
   },
@@ -475,8 +480,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:39:39.641773Z",
-     "start_time": "2020-10-10T16:39:37.685843Z"
+     "end_time": "2021-03-12T14:04:03.952814Z",
+     "start_time": "2021-03-12T14:03:55.232098Z"
     }
    },
    "outputs": [],
@@ -486,12 +491,15 @@
     "sigma_z_high_threshold = 80\n",
     "\n",
     "em_sub = emitter[(emitter.xyz_sig_nm[:, 0] <= sigma_x_high_threshold) * (emitter.xyz_sig_nm[:, 1] <= sigma_x_high_threshold) * (emitter.xyz_sig_nm[:, 2] <= sigma_z_high_threshold)]\n",
-    "# em_sub = emitter.filter_by_sigma(0.74)  # alternatively\n",
+    "# em_sub = emitter.filter_by_sigma(0.67)  # alternatively\n",
     "\n",
     "plt.figure(figsize=(12, 12))\n",
-    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., clip_percentile=97.).render(em_sub)\n",
-    "plt.title(f'Filtered Image {np.round(100*len(em_sub)/len(emitter))} % of emitters remaining')\n",
+    "decode.renderer.Renderer3D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=3, zextent=[-600,600], plot_axis=(0,1,2)).render(em_sub)\n",
+    "plt.title(f'Filtered Image {np.round(100*len(em_sub)/len(emitter))} % of em_subs remaining', loc='right')\n",
     "\n",
+    "plt.show()\n",
+    "plt.figure(figsize=(12, 3))\n",
+    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=30, plot_axis=(0,2)).render(em_sub)\n",
     "plt.show()"
    ]
   },
@@ -499,8 +507,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of specifying cutoffs for the three coordinates you can also use the filter_by_sigma method to directly specify what share of the emitters you wan't to keep.\n",
-    "Below we remove the 60% of emitters with the highest weighted combined uncertainty."
+    "Instead of removing localizations you can also plot all of them and account for their uncertainty by rendering every localization as a Gaussian with a two dimensional standard deviation equal to the predicted uncertainty.\n",
+    "Below we compare plotting with a constant sigma blur, and with individually rendered Gaussians. The second option removes artifacts and correctly blurs out of focus structures.\n",
+    "\n",
+    "More advanced plotting routines are for example available in the SMAP package (https://github.com/jries/SMAP)"
    ]
   },
   {
@@ -508,19 +518,25 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:39:41.028239Z",
-     "start_time": "2020-10-10T16:39:39.644060Z"
+     "end_time": "2021-03-12T14:09:04.689409Z",
+     "start_time": "2021-03-12T14:07:48.068477Z"
     }
    },
    "outputs": [],
    "source": [
-    "em_sub = emitter.filter_by_sigma(0.4)\n",
+    "fig, axs = plt.subplots(2,2,figsize=(24, 12), sharex='col', gridspec_kw={'height_ratios':[1,1200/7000]})\n",
     "\n",
-    "plt.figure(figsize=(12, 12))\n",
-    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., clip_percentile=97.).render(em_sub)\n",
-    "plt.title(f'Filtered Image {np.round(100*len(em_sub)/len(emitter))} % of emitters remaining')\n",
+    "decode.renderer.Renderer3D(px_size=5., sigma_blur=5., rel_clip=None, abs_clip=3, \n",
+    "                           xextent=[14000,22000], yextent=[1000,8000], zextent=[-600,600], plot_axis=(0,1,2), contrast=3).render(emitter, axs[0,0])\n",
+    "axs[0,0].set_title('Rendering with constant sigma blur 5 nm', fontsize=20)\n",
+    "decode.renderer.Renderer2D(px_size=5., sigma_blur=5., rel_clip=None, abs_clip=15, \n",
+    "                           xextent=[14000,22000], yextent=[1000,8000], zextent=[-600,600], plot_axis=(0,2), contrast=2).render(emitter, axs[1,0])\n",
     "\n",
-    "plt.show()"
+    "decode.renderer.Renderer3D_auto_sig(px_size=5., filt_size=20, rel_clip=None, abs_clip=3, \n",
+    "                                    xextent=[14000,22000], yextent=[1000,8000], zextent=[-600,600], plot_axis=(0,1,2), contrast=3).render(emitter, axs[0,1])\n",
+    "axs[0,1].set_title('Rendering with individual sigmas', fontsize=20)\n",
+    "decode.renderer.Renderer2D_auto_sig(px_size=5., filt_size=20, rel_clip=None, abs_clip=3, \n",
+    "                                    xextent=[14000,22000], yextent=[1000,8000], zextent=[-600,600], plot_axis=(0,2)).render(emitter, axs[1,1])"
    ]
   },
   {
@@ -536,7 +552,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2021-03-12T14:05:48.553250Z",
+     "start_time": "2021-03-12T14:05:47.730466Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     },
@@ -552,9 +571,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:decode_dev_cpu]",
+   "display_name": "Python [conda env:decode_dev_cuda]",
    "language": "python",
-   "name": "conda-env-decode_dev_cpu-py"
+   "name": "conda-env-decode_dev_cuda-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -566,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
