additional comments to Training, change plotting in Fit

--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T13:10:58.369679Z",
-     "start_time": "2020-10-10T13:10:54.449771Z"
+     "end_time": "2021-03-16T17:23:30.081887Z",
+     "start_time": "2021-03-16T17:23:24.297709Z"
     }
    },
    "outputs": [],
@@ -49,13 +49,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T16:31:53.716133Z",
-     "start_time": "2020-10-10T16:31:53.711877Z"
+     "end_time": "2021-03-16T17:23:30.091508Z",
+     "start_time": "2021-03-16T17:23:30.086762Z"
     }
    },
    "outputs": [],
    "source": [
-    "device = 'cuda'  # or 'cpu'\n",
+    "device = 'cuda:1'  # or 'cpu'\n",
     "device_ix = 0  # possibly change device index (only for cuda)\n",
     "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you know what you are doing.\n",
     "worker = 4  # number of workers for data loading. Change only if you know what you are doing.\n",
@@ -66,7 +66,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T17:23:33.315488Z",
+     "start_time": "2021-03-16T17:23:30.094675Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# load example calibration file from server (this can be skipped)\n",
@@ -104,8 +109,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T13:10:58.374538Z",
-     "start_time": "2020-10-10T13:10:58.371804Z"
+     "end_time": "2021-03-16T17:23:33.320565Z",
+     "start_time": "2021-03-16T17:23:33.317982Z"
     }
    },
    "outputs": [],
@@ -133,8 +138,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T13:10:58.422278Z",
-     "start_time": "2020-10-10T13:10:58.376603Z"
+     "end_time": "2021-03-16T17:23:33.337627Z",
+     "start_time": "2021-03-16T17:23:33.322405Z"
     }
    },
    "outputs": [],
@@ -148,8 +153,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T13:10:58.422278Z",
-     "start_time": "2020-10-10T13:10:58.376603Z"
+     "end_time": "2021-03-16T17:23:33.362833Z",
+     "start_time": "2021-03-16T17:23:33.340478Z"
     }
    },
    "outputs": [],
@@ -175,8 +180,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T13:10:58.442152Z",
-     "start_time": "2020-10-10T13:10:58.430385Z"
+     "end_time": "2021-03-16T17:23:33.372404Z",
+     "start_time": "2021-03-16T17:23:33.364696Z"
     }
    },
    "outputs": [],
@@ -210,8 +215,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T13:10:58.989582Z",
-     "start_time": "2020-10-10T13:10:58.979739Z"
+     "end_time": "2021-03-16T17:23:33.381423Z",
+     "start_time": "2021-03-16T17:23:33.375116Z"
     }
    },
    "outputs": [],
@@ -239,8 +244,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T13:11:00.136401Z",
-     "start_time": "2020-10-10T13:11:00.130209Z"
+     "end_time": "2021-03-16T17:23:33.390111Z",
+     "start_time": "2021-03-16T17:23:33.383578Z"
     }
    },
    "outputs": [],
@@ -263,8 +268,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-07T17:37:13.891159Z",
-     "start_time": "2020-10-07T17:37:13.353460Z"
+     "end_time": "2021-03-16T17:23:33.651403Z",
+     "start_time": "2021-03-16T17:23:33.391971Z"
     }
    },
    "outputs": [],
@@ -278,8 +283,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T13:15:57.464446Z",
-     "start_time": "2020-10-10T13:15:57.460660Z"
+     "end_time": "2021-03-16T17:23:33.653389Z",
+     "start_time": "2021-03-16T17:23:24.281Z"
     }
    },
    "outputs": [],
@@ -300,8 +305,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-07T17:37:19.712616Z",
-     "start_time": "2020-10-07T17:37:15.484074Z"
+     "end_time": "2021-03-16T17:23:33.654122Z",
+     "start_time": "2021-03-16T17:23:24.284Z"
     }
    },
    "outputs": [],
@@ -329,8 +334,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-07T17:23:28.126478Z",
-     "start_time": "2020-10-07T17:23:26.387702Z"
+     "end_time": "2021-03-16T17:23:33.655038Z",
+     "start_time": "2021-03-16T17:23:24.288Z"
     }
    },
    "outputs": [],
@@ -357,8 +362,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-07T17:23:37.724720Z",
-     "start_time": "2020-10-07T17:23:37.107083Z"
+     "end_time": "2021-03-16T17:23:33.655863Z",
+     "start_time": "2021-03-16T17:23:24.291Z"
     }
    },
    "outputs": [],
@@ -379,6 +384,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If the your available GPU memory is lower than 6GB (you can check by executing !nvidia-smi in a cell) you will likely run into memory errors. \n",
+    "To avoid this you can lower the batch_size to 32 to 16. However you should have at least a 4GB GPU available. You might be able to run training on a smaller GPU using very small batch sizes but this will negatively impact performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-16T17:23:33.656599Z",
+     "start_time": "2021-03-16T17:23:24.295Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# param.HyperParameter.batch_size = 32"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Once you are happy with you settings you can write the parameters to a file (or edit the param_friendly.yaml directly)"
    ]
   },
@@ -387,8 +414,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-10T13:16:00.655365Z",
-     "start_time": "2020-10-10T13:16:00.630594Z"
+     "end_time": "2021-03-17T12:33:44.772972Z",
+     "start_time": "2021-03-17T12:33:44.751297Z"
     }
    },
    "outputs": [],
@@ -413,9 +440,12 @@
     "    cd [directory where this notebook is]\n",
     "    python -m decode.neuralfitter.train.live_engine -p notebook_example.yaml  # change path if you modified it\n",
     "    \n",
+    "You can end training at any point by killing the associated process if you think that the model has converged. The current network is stored after every epoch.   \n",
+    "You can also continue training (for example in case of crash) by setting the param.InOut.checkpoint_init parameter to the path of the ckpt.pt of the training run.\n",
+    "    \n",
     "In case you experience multiprocessing issues, please consult our FAQ (https://decode.readthedocs.io/en/master/faq.html). You may run the command above with the additional `-w 0` flag.\n",
     "\n",
-    "To check training progress you may start a tensorboard instance. Again, please open a new terminal instancePlease navigate (within the terminal, in a new terminal window/tab) to the directory of this notebook and start tensorboard. Don't forget to activate the conda environment before starting tensorboard.\n",
+    "To check training progress you may start a tensorboard instance. Again, please open a new terminal instance and navigate (within the terminal, in a new terminal window/tab) to the directory of this notebook and start tensorboard. Don't forget to activate the conda environment before starting tensorboard.\n",
     "\n",
     "    cd [directory which containts 'runs', i.e. this notebook's path]\n",
     "    conda activate decode_env\n",
@@ -439,9 +469,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:decode_env_rc4]",
+   "display_name": "Python [conda env:decode_dev_cuda]",
    "language": "python",
-   "name": "conda-env-decode_env_rc4-py"
+   "name": "conda-env-decode_dev_cuda-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -453,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
