Fix import, add cell to determine total GPU memory.

--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -13,6 +13,7 @@
    "source": [
     "import decode\n",
     "import decode.utils\n",
+    "import decode.neuralfitter.train.live_engine\n",
     "\n",
     "import torch\n",
     "import numpy as np\n",
@@ -96,7 +97,7 @@
    "source": [
     "## Bead calibration\n",
     "\n",
-    "To obtain the calibration file a spline model is fit on a stack of beads.     \n",
+    "To obtain the calibration file a spline model is fit on a stack of beads.\n",
     "We recommend to use fit3Dspline which is part of the SMAP package.\n",
     "\n",
     "1. Install the stand-alone version of SMAP from [www.rieslab.de](www.rieslab.de) or if you have Matlab, downlowd the source-code from [www.github.com/jries/SMAP](www.github.com/jries/SMAP). There, you also find the installation instructions and Documentation.\n",
@@ -235,7 +236,7 @@
    "metadata": {},
    "source": [
     "Lastly we provide the path to the calibration file, and to the output destination.\n",
-    "There are more parameters (you can just execute param in a cell to look at them) that you should not need to change.   \n",
+    "There are more parameters (you can just execute param in a cell to look at them) that you should not need to change.\n",
     "You might have to reduce the batch size (param.HyperParameter.batch_size) if you run out of memory."
    ]
   },
@@ -297,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us sample a set frames, and also load our data: "
+    "Let us sample a set frames, and also load our data:"
    ]
   },
   {
@@ -325,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the mean brightness, we see that there is a large missmatch. The reason is that we simulate the photons that are emitted by the fluorophores, while the tiff file shows the photons that are recorded by the camera (after amplificiation). To enable direct comparison we convert the real data frames into photon numbers.   \n",
+    "Looking at the mean brightness, we see that there is a large missmatch. The reason is that we simulate the photons that are emitted by the fluorophores, while the tiff file shows the photons that are recorded by the camera (after amplificiation). To enable direct comparison we convert the real data frames into photon numbers.\n",
     "Be aware that camera.forward()  and camera.forward() are not each others inverse. forward() performs noise sampling, while backward() simply rescales by the em_gain"
    ]
   },
@@ -353,7 +354,7 @@
     }
    },
    "source": [
-    "By comparing random frames (chosing a dense region of the real data) we can convince ourselves that the distributions are somewhat similar.   \n",
+    "By comparing random frames (chosing a dense region of the real data) we can convince ourselves that the distributions are somewhat similar.\n",
     "If you observe large differences for your dataset, you probably have to adjust param.Simulation.bg_uniform and param.Simulation.intensity_mu_sig"
    ]
   },
@@ -384,22 +385,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the your available GPU memory is lower than 6GB (you can check by executing !nvidia-smi in a cell) you will likely run into memory errors. \n",
-    "To avoid this you can lower the batch_size to 32 to 16. However you should have at least a 4GB GPU available. You might be able to run training on a smaller GPU using very small batch sizes but this will negatively impact performance."
+    "If your available (i.e. free) GPU memory is lower than 6GB you will likely run into memory errors. Check your total GPU memory on the set device by running the cell below.\n",
+    "To avoid this you can lower the batch_size to 32 to 16. However you should have at least a 4GB GPU available. You might be able to run training on a smaller GPU using very small batch sizes but this will negatively impact performance.\n",
+    "\n",
+    "**Note:** If other processes or a screen attached to the GPU you want to train on consumes GPU resources, the free GPU memory might be significantly lower than the total GPU memory size."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-16T17:23:33.656599Z",
-     "start_time": "2021-03-16T17:23:24.295Z"
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [],
    "source": [
-    "# param.HyperParameter.batch_size = 32"
+    "if device != 'cpu':\n",
+    "    mem_gb = torch.cuda.get_device_properties(device).total_memory / 1e9\n",
+    "    print(f\"Your approximate total GPU memory size on the set device {device} is {mem_gb:.2f} GB.\")\n",
+    "\n",
+    "param.HyperParameter.batch_size = 32"
    ]
   },
   {
@@ -421,7 +431,7 @@
    "outputs": [],
    "source": [
     "param_out_path = 'notebook_example.yaml' # or an alternative path\n",
-    "decode.utils.param_io.save_params(param_out_path, param)  "
+    "decode.utils.param_io.save_params(param_out_path, param)"
    ]
   },
   {
@@ -439,10 +449,10 @@
     "    conda activate decode_env\n",
     "    cd [directory where this notebook is]\n",
     "    python -m decode.neuralfitter.train.live_engine -p notebook_example.yaml  # change path if you modified it\n",
-    "    \n",
-    "You can end training at any point by killing the associated process if you think that the model has converged. The current network is stored after every epoch.   \n",
+    "\n",
+    "You can end training at any point by killing the associated process if you think that the model has converged. The current network is stored after every epoch.\n",
     "You can also continue training (for example in case of crash) by setting the param.InOut.checkpoint_init parameter to the path of the ckpt.pt of the training run.\n",
-    "    \n",
+    "\n",
     "In case you experience multiprocessing issues, please consult our FAQ (https://decode.readthedocs.io/en/master/faq.html). You may run the command above with the additional `-w 0` flag.\n",
     "\n",
     "To check training progress you may start a tensorboard instance. Again, please open a new terminal instance and navigate (within the terminal, in a new terminal window/tab) to the directory of this notebook and start tensorboard. Don't forget to activate the conda environment before starting tensorboard.\n",
@@ -452,19 +462,12 @@
     "    tensorboard --samples_per_plugin images=100 --port=6006 --logdir=runs\n",
     "\n",
     "Open it in your browser: http://localhost:6006\n",
-    "Numereous evaluation metrics are tracked here. Under the 'Images' header you can see example frames and localizations.   \n",
-    "Keep in mind though that these are all calculated on the simulated data. So you can check whether the training has converged, \n",
+    "Numereous evaluation metrics are tracked here. Under the 'Images' header you can see example frames and localizations.\n",
+    "Keep in mind though that these are all calculated on the simulated data. So you can check whether the training has converged,\n",
     "but you'll have to run the model on the actual data to see if you set the parameters correctly.\n",
     "\n",
     "For that open the Fit.ipynb notebook."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -483,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
