Clean up notebooks

--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -61,7 +61,12 @@
     "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you know what you are doing.\n",
     "worker = 4  # number of workers for data loading. Change only if you know what you are doing.\n",
     "\n",
-    "torch.set_num_threads(threads)  # set num threads"
+    "torch.set_num_threads(threads)  # set num threads\n",
+    "\n",
+    "if device != 'cpu':\n",
+    "    if (not torch.cuda.is_available()) or (not decode.simulation.psf_kernel.CubicSplinePSF.cuda_is_available()):\n",
+    "        raise ValueError(\"You have selected a non CPU device, but CUDA is not available.\"\n",
+    "                         \"Refer to CPU version or check your installation.\")"
    ]
   },
   {
@@ -82,7 +87,7 @@
     "path = Path('')\n",
     "\n",
     "# change here for other files\n",
-    "package = gateway['examples']['package_1']\n",
+    "package = gateway['examples']['experimental_data_workflow']\n",
     "\n",
     "# get paths to files\n",
     "zip_folder = decode.utils.example_helper.load_example_package(\n",
@@ -372,10 +377,11 @@
     "plt.figure(figsize=(12,5))\n",
     "\n",
     "plt.subplot(121)\n",
-    "plt.imshow(sim_frames[np.random.randint(0,len(sim_frames))])\n",
+    "decode.plot.PlotFrame(sim_frames[torch.randint(0, len(sim_frames), size=(1, ))]).plot()\n",
     "plt.colorbar()\n",
+    "\n",
     "plt.subplot(122)\n",
-    "plt.imshow(data_frames[np.random.randint(0,len(data_frames)), 30:70,-40:])\n",
+    "decode.plot.PlotFrame(data_frames[torch.randint(0, len(data_frames), size=(1, )), 30:70,-40:]).plot()\n",
     "plt.colorbar()\n",
     "\n",
     "plt.show()"
@@ -385,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If your available (i.e. free) GPU memory is lower than 6GB you will likely run into memory errors. Check your total GPU memory on the set device by running the cell below.\n",
+    "**Note:** If your available (i.e. free) GPU memory is lower than 6GB you will likely run into memory errors. Check your total GPU memory on the set device by running the cell below.\n",
     "To avoid this you can lower the batch_size to 32 to 16. However you should have at least a 4GB GPU available. You might be able to run training on a smaller GPU using very small batch sizes but this will negatively impact performance.\n",
     "\n",
     "**Note:** If other processes or a screen attached to the GPU you want to train on consumes GPU resources, the free GPU memory might be significantly lower than the total GPU memory size."
@@ -453,7 +459,7 @@
     "You can end training at any point by killing the associated process if you think that the model has converged. The current network is stored after every epoch.\n",
     "You can also continue training (for example in case of crash) by setting the param.InOut.checkpoint_init parameter to the path of the ckpt.pt of the training run.\n",
     "\n",
-    "In case you experience multiprocessing issues, please consult our FAQ (https://decode.readthedocs.io/en/master/faq.html). You may run the command above with the additional `-w 0` flag.\n",
+    "In case you experience multiprocessing issues, please consult our FAQ in our documentation (https://decode.readthedocs.io/). You may run the command above with the additional `-w 0` flag.\n",
     "\n",
     "To check training progress you may start a tensorboard instance. Again, please open a new terminal instance and navigate (within the terminal, in a new terminal window/tab) to the directory of this notebook and start tensorboard. Don't forget to activate the conda environment before starting tensorboard.\n",
     "\n",
@@ -472,9 +478,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:decode_dev_cuda]",
+   "display_name": "Python [conda env:decode_dev]",
    "language": "python",
-   "name": "conda-env-decode_dev_cuda-py"
+   "name": "conda-env-decode_dev-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -486,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
