--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -17,6 +17,7 @@
      "end_time": "2021-03-17T12:51:13.279039Z",
      "start_time": "2021-03-17T12:51:09.146649Z"
     },
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -64,7 +65,12 @@
     "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you know what you are doing.\n",
     "worker = 0  # number of workers for data loading. Used a default of 0 for safety. Multiprocessing on windows is sometimes not stable\n",
     "\n",
-    "torch.set_num_threads(threads)  # set num threads"
+    "torch.set_num_threads(threads)  # set num threads\n",
+    "\n",
+    "if device != 'cpu':\n",
+    "    if not torch.cuda.is_available():\n",
+    "        raise ValueError(\"You have selected a non CPU device, but CUDA is not available.\"\n",
+    "                         \"Refer to CPU version or check your installation.\")"
    ]
   },
   {
@@ -92,9 +98,10 @@
    },
    "outputs": [],
    "source": [
-    "param_path = 'config/notebook_example.yaml'\n",
-    "model_path = '2020-10-07_14-11-51_turagas-ws4/model_0.pt'\n",
-    "frame_path = 'package_1/frames.tif'\n",
+    "# here you need to specify the parameters with suffix _run.yaml (not param_run_in.yaml)\n",
+    "param_path = 'config/param_run.yaml'\n",
+    "model_path = 'network/model_0.pt'\n",
+    "frame_path = 'experimental_data_workflow/frames.tif'\n",
     "\n",
     "# specify camera parameters of tiffs\n",
     "meta = {\n",
@@ -127,6 +134,7 @@
      "end_time": "2021-03-17T12:51:16.631828Z",
      "start_time": "2021-03-17T12:51:13.420381Z"
     },
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -142,14 +150,14 @@
     "path = Path('')\n",
     "\n",
     "# change here for other files\n",
-    "package = gateway['examples']['package_1']\n",
+    "package = gateway['examples']['experimental_data_workflow']\n",
     "\n",
     "# get paths to files\n",
     "zip_folder = decode.utils.example_helper.load_example_package(\n",
     "    path=(path / package['name']).with_suffix('.zip'), url=package['url'], hash=package['hash'])\n",
     "\n",
     "frame_path = zip_folder / 'frames.tif'\n",
-    "meta_path = zip_folder / 'meta.yaml'\n",
+    "meta_path = zip_folder / 'frames_meta.yaml'\n",
     "model_path = zip_folder / 'model.pt'\n",
     "param_path = zip_folder / 'param_run.yaml'\n",
     "\n",
@@ -349,9 +357,11 @@
     "plt.figure(figsize=(12, 6))\n",
     "plt.subplot(121)\n",
     "decode.plot.PlotFrameCoord(frame=frame_proc.forward(frames[[random_ix]])).plot()\n",
+    "\n",
     "plt.subplot(122)\n",
     "decode.plot.PlotFrameCoord(frame=frame_proc.forward(frames[[random_ix]]),\n",
     "                           pos_out=em_subset.xyz_px, phot_out=em_subset.prob).plot()\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -374,11 +384,11 @@
    },
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(14,4))\n",
+    "plt.figure(figsize=(14, 4))\n",
     "\n",
     "plt.subplot(131)\n",
     "mu, sig = param.Simulation.intensity_mu_sig\n",
-    "plt.axvspan(0, mu+sig*3, color='green', alpha=0.1)\n",
+    "plt.axvspan(0, mu + sig * 3, color='green', alpha=0.1)\n",
     "sns.distplot(emitter.phot.numpy())\n",
     "plt.xlabel('Inferred number of photons')\n",
     "plt.xlim(0)\n",
@@ -455,13 +465,24 @@
    },
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(2,2,figsize=(24, 12), sharex='col', gridspec_kw={'height_ratios':[1,1200/20000]})\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(24, 12), sharex='col',\n",
+    "                        gridspec_kw={'height_ratios': [1, 1200 / 20000]})\n",
     "\n",
-    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=5, zextent=[-600,600], colextent=[-500,500], plot_axis=(0,1), contrast=1.25).render(emitter, emitter.xyz_nm[:,2], ax=axs[0,0])\n",
-    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=50, zextent=[-600,600], plot_axis=(0,2)).render(emitter, ax=axs[1,0])\n",
+    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=5,\n",
+    "                           zextent=[-600, 600], colextent=[-500, 500], plot_axis=(0, 1),\n",
+    "                           contrast=1.25).render(emitter, emitter.xyz_nm[:, 2], ax=axs[0, 0])\n",
+    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=50,\n",
+    "                           zextent=[-600, 600], plot_axis=(0, 2)).render(emitter, ax=axs[1, 0])\n",
     "\n",
-    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=5, zextent=[-600,600], colextent=[0,75], plot_axis=(0,1), contrast=1.25).render(emitter, emitter.xyz_sig_weighted_tot_nm, ax=axs[0,1])\n",
-    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=50, zextent=[-600,600], colextent=[0,75], plot_axis=(0,2)).render(emitter, emitter.xyz_sig_weighted_tot_nm, ax=axs[1,1])"
+    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=5,\n",
+    "                           zextent=[-600, 600], colextent=[0, 75], plot_axis=(0, 1),\n",
+    "                           contrast=1.25).render(emitter, emitter.xyz_sig_weighted_tot_nm, ax=axs[0, 1])\n",
+    "\n",
+    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=50,\n",
+    "                           zextent=[-600, 600], colextent=[0, 75], plot_axis=(0, 2)).\\\n",
+    "    render(emitter, emitter.xyz_sig_weighted_tot_nm, ax=axs[1, 1])\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -489,15 +510,24 @@
     "sigma_y_high_threshold = 40\n",
     "sigma_z_high_threshold = 80\n",
     "\n",
-    "em_sub = emitter[(emitter.xyz_sig_nm[:, 0] <= sigma_x_high_threshold) * (emitter.xyz_sig_nm[:, 1] <= sigma_x_high_threshold) * (emitter.xyz_sig_nm[:, 2] <= sigma_z_high_threshold)]\n",
+    "em_sub = emitter[\n",
+    "    (emitter.xyz_sig_nm[:, 0] <= sigma_x_high_threshold) \n",
+    "    * (emitter.xyz_sig_nm[:, 1] <= sigma_x_high_threshold) \n",
+    "    * (emitter.xyz_sig_nm[:, 2] <= sigma_z_high_threshold)\n",
+    "    ]\n",
     "# em_sub = emitter.filter_by_sigma(0.67)  # alternatively\n",
     "\n",
     "plt.figure(figsize=(12, 12))\n",
-    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=5, zextent=[-600,600], colextent=[-500,500], plot_axis=(0,1), contrast=1.5).render(em_sub, em_sub.xyz_nm[:,2])\n",
-    "plt.title(f'Filtered Image {np.round(100*len(em_sub)/len(emitter))} % of em_subs remaining', loc='right')\n",
+    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=5,\n",
+    "                           zextent=[-600, 600], colextent=[-500, 500], plot_axis=(0, 1),\n",
+    "                           contrast=1.5).render(em_sub, em_sub.xyz_nm[:, 2])\n",
+    "plt.title(\n",
+    "    f'Filtered Image {np.round(100 * len(em_sub) / len(emitter))} % of em_subs remaining', loc='right')\n",
     "plt.show()\n",
     "plt.figure(figsize=(12, 3))\n",
-    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=50, zextent=[-600,600], plot_axis=(0,2)).render(em_sub)\n",
+    "decode.renderer.Renderer2D(px_size=10., sigma_blur=5., rel_clip=None, abs_clip=50,\n",
+    "                           zextent=[-600, 600], plot_axis=(0, 2)).render(em_sub)\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -522,16 +552,36 @@
    },
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(2,2,figsize=(24, 12), sharex='col', gridspec_kw={'height_ratios':[1,1200/7000]})\n",
-    "extents = {'xextent':[14000,22000],'yextent':[1000,8000],'zextent':[-600,600],'colextent':[-500,500]}\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(24, 12), sharex='col',\n",
+    "                        gridspec_kw={'height_ratios': [1, 1200 / 7000]})\n",
+    "extents = {\n",
+    "    'xextent': [14000, 22000],\n",
+    "    'yextent': [1000, 8000],\n",
+    "    'zextent': [-600, 600],\n",
+    "    'colextent': [-500, 500]\n",
+    "}\n",
     "\n",
-    "decode.renderer.Renderer2D(px_size=5., sigma_blur=5., rel_clip=None, abs_clip=3, **extents, plot_axis=(0,1), contrast=3).render(emitter, emitter.xyz_nm[:,2], ax=axs[0,0])\n",
-    "axs[0,0].set_title('Rendering with constant sigma blur 5 nm', fontsize=20)\n",
-    "decode.renderer.Renderer2D(px_size=5., sigma_blur=5., rel_clip=None, abs_clip=15, **extents,plot_axis=(0,2), contrast=2).render(emitter, ax=axs[1,0])\n",
+    "decode.renderer.Renderer2D(\n",
+    "    px_size=5., sigma_blur=5., rel_clip=None, abs_clip=3, **extents,\n",
+    "    plot_axis=(0, 1), contrast=3).render(emitter, emitter.xyz_nm[:, 2], ax=axs[0, 0])\n",
     "\n",
-    "decode.renderer.RendererIndividual2D(px_size=5., filt_size=20, rel_clip=None, abs_clip=3, **extents, plot_axis=(0,1), contrast=3).render(emitter, emitter.xyz_nm[:,2], ax=axs[0,1])\n",
-    "axs[0,1].set_title('Rendering with individual sigmas', fontsize=20)\n",
-    "decode.renderer.RendererIndividual2D(px_size=5., filt_size=20, rel_clip=None, abs_clip=3, **extents,  plot_axis=(0,2)).render(emitter, ax=axs[1,1])"
+    "decode.renderer.Renderer2D(\n",
+    "    px_size=5., sigma_blur=5., rel_clip=None, abs_clip=15, **extents,\n",
+    "    plot_axis=(0, 2), contrast=2).render(emitter, ax=axs[1, 0])\n",
+    "\n",
+    "decode.renderer.RendererIndividual2D(\n",
+    "    px_size=5., filt_size=20, rel_clip=None, abs_clip=3, **extents,\n",
+    "    plot_axis=(0, 1), contrast=3).render(emitter, emitter.xyz_nm[:, 2], ax=axs[0, 1])\n",
+    "\n",
+    "decode.renderer.RendererIndividual2D(\n",
+    "    px_size=5., filt_size=20, rel_clip=None, abs_clip=3, **extents,\n",
+    "    plot_axis=(0, 2)).render(emitter, ax=axs[1, 1])\n",
+    "\n",
+    "axs[0, 0].set_title('Rendering with constant sigma blur 5 nm', fontsize=20)\n",
+    "axs[0, 1].set_title('Rendering with individual sigmas', fontsize=20)\n",
+    "\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -551,6 +601,7 @@
      "end_time": "2021-03-17T12:53:27.772816Z",
      "start_time": "2021-03-17T12:51:08.969Z"
     },
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -566,9 +617,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:decode_dev_cuda]",
+   "display_name": "Python [conda env:decode_dev]",
    "language": "python",
-   "name": "conda-env-decode_dev_cuda-py"
+   "name": "conda-env-decode_dev-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -580,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
