Add note to manually specify path

--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -70,6 +70,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "If you have manually downloaded the example package *(experimental_data_workflow)* you can specify\n",
+    "the root directory of the .zip in the path variable below. Otherwise, the package will be\n",
+    "loaded/reloaded."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
