Clearify purpose of training script

--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -29,12 +29,19 @@
    "source": [
     "# DECODE - Training\n",
     "\n",
-    "This notebook highlights how to train a DECODE model for fitting experimental data.\n",
+    "This notebook highlights how to generate a training parameter file and\n",
+    "train a DECODE model for fitting experimental data.\n",
     "\n",
-    "The DECODE network is trained on simulated data. This requires a calibration spline based PSF model,\n",
+    "The DECODE model is trained on simulated data. This requires a calibration spline based PSF model,\n",
     "and a parameter file that contains camera settings and other hyper parameters to set up the simulation process.\n",
     "\n",
-    "While we provide an example calibration file here to demonstrate the training procedure you will have to create one yourself for your own data."
+    "While we provide an example calibration file here to demonstrate the training procedure you will have to create one yourself for your own data.\n",
+    "\n",
+    "If you plan to use DECODE regularly you should take a look at the generated parameter file at the end of this notebook\n",
+    "and will recognise that it just holds a couple of parameters and paths. You will want to adjust these\n",
+    "to your data by creating or modifying the .yaml file directly.\n",
+    "After that you can start the training directly (see the last section of this notebook).\n",
+    "Alternatively, SMAP can create this parameter file for you (please consult the documentation for that).\n"
    ]
   },
   {
